--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,58 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0D1117;
+  --foreground: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+.honk-font {
+  font-family: var(--font-honk), sans-serif;
 }
+
+.poppins-font {
+  font-family: var(--font-poppins), sans-serif;
+}
+
+.robotoMono-font {
+  font-family: var(--font-roboto-mono), sans-serif;
+}
+
+
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.before-h3 {
+  content: '<h3>';
+  position: absolute;
+  top: -1.5rem; /* -top-6 équivaut à -1.5rem */
+  left: -1.25rem; /* -left-5 équivaut à -1.25rem */
+  opacity: 0.3;
+}
+
+.after-h3 {
+  content: '</h3>';
+  position: absolute;
+  bottom: -1.5rem; /* -bottom-6 équivaut à -1.5rem */
+  left: -1.25rem; /* -left-5 équivaut à -1.25rem */
+  opacity: 0.3;
+}
+
+html {
+  --cursor-color: #fff
+}
+
+html.dark-mode {
+  --cursor-color: #333
+}
+
