--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,9 @@
   font-family: var(--font-roboto-mono), sans-serif;
 }
 
+.spaceGrotesk-font {
+  font-family: var(--font-space-grotesk), sans-serif;
+}
 
 
 body {
@@ -57,4 +60,61 @@ html {
 html.dark-mode {
   --cursor-color: #333
 }
+
+
+.holographic-card {
+  position: relative;
+  background: #161B22;
+  overflow: hidden;
+  border-radius: 8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.holographic-card::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(
+    45deg,
+    rgba(168, 85, 247, 0.5),  /* Purple-500 */
+    rgba(236, 72, 153, 0.5),  /* Pink-500 */
+    rgba(56, 189, 248, 0.5),  /* Cyan-500 */
+    rgba(52, 211, 153, 0.5)   /* Emerald-400 */
+  );
+  background-size: 300%;
+  border-radius: 50%;
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.holographic-card:hover::before {
+  opacity: 1;
+  transform: scale(1.2);
+  animation: holographic-animation 2.5s infinite;
+}
+
+
+.holographic-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
+
+
+
+@keyframes holographic-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 
