--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.tilt-parallax {
+  transform-style: preserve-3d;
+  transform: perspective(1000px);
+  transform: translateZ(20px);
+}
+
 .before-h3 {
   content: '<h3>';
   position: absolute;
